# qent_backend

./: .env.example  .gitignore  BACKEND_GUIDE.md  Cargo.toml  Dockerfile  LEARNING_GUIDE.md  PRIVACY_POLICY.md  README.md
.ipynb_checkpoints/: BACKEND_GUIDE-checkpoint.md
migrations/: 001_initial.sql  002_additions_and_seed.sql  003_saved_cards.sql  004_verification_codes.sql  005_more_reviews.sql  006_car_multiple_photos.sql  007_massive_mock_data.sql  008_partnership.sql  009_model_specific_photos.sql  010_1000_mock_cars.sql  011_chat.sql  012_host_dashboard.sql  013_stories.sql  014_password_reset_and_damage_reports.sql  015_compliance.sql  016_waitlist.sql  017_apple_auth.sql  018_google_auth.sql  019_device_tokens.sql  020_messages_client_id.sql  021_partner_profiles_listings.sql  022_partner_email_verified.sql
src/: main.rs  openapi.rs
src/handlers/: admin.rs  auth.rs  bookings.rs  cards.rs  cars.rs  chat.rs  compliance.rs  damage_reports.rs  dashboard.rs  devices.rs  favorites.rs  health.rs  mod.rs  notifications.rs  partner.rs  partner_v2.rs  payments.rs  protection_plans.rs  reviews.rs  stories.rs  turn.rs  upload.rs  verification.rs  waitlist.rs  ws.rs
src/middleware/: auth.rs
src/models/: booking.rs  car.rs  card.rs  device_token.rs  favorite.rs  mod.rs  notification.rs  partner.rs  payment.rs  protection_plan.rs  review.rs  (+1 more)
tests/: api_tests.rs
uploads/: 5f52cb33-719d-4525-a2a4-b85c7888ed82_2c963d61-e56e-4f73-a00c-38bc54aa9387.m4a
web/: admin.html  index.html  privacy.html
webapp/: index.html  package-lock.json  package.json  tailwind.config.js
(+28 files in other folders)
